--- a/general.css
+++ b/general.css
@@ -67,7 +67,7 @@ body{
 .welcome{
     position: relative;
     top: -80px;
-    background-image: url("/images/bodyBg.jpg");
+    background-image: url("bodyBg.jpg");
     background-size: cover;
     width: 100%;
     height: 100vh;
